# BullShift

./: .dockerignore  .env.example  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  VERSION  build.sh  bump-version.sh  docker-compose.yml
.github/workflows/: ci.yml  release.yml
deploy/aws/: task-definition.json
deploy/azure/: container-app.json
deploy/gcp/: cloudrun.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_SETUP.md  README.md  REMAINING_TASKS.md  TROUBLESHOOTING.md  VIEW_REFACTORING.md  api_reference.md  architecture.md  cleanup.md  code-quality.md  configuration_guide.md  development_setup.md  mobile-applications.md  project-specification.md  roadmap.md  security-audit.md  security.md  troubleshooting.md  user_manual.md
docs/adr/: adr-001-rust-flutter-architecture.md  adr-002-provider-pattern.md  adr-003-view-modularization.md  adr-004-charting-implementation.md  adr-005-market-data-provider.md  adr-006-broker-abstraction.md
docs/development/: code-audit-2026-03.md
docs/guides/: broker-integration.md  contributing.md  development_setup.md  production-deployment.md  quick-reference.md  refactoring-summary.md
docs/reference/: api_reference.md  audit-summary.md  configuration_guide.md
flutter/: pubspec.yaml
flutter/lib/: main.dart
flutter/lib/services/: ai_bridge_service.dart  base_provider.dart  rust_trading_engine.dart  safe_cast.dart  security_manager.dart
flutter/lib/widgets/: advanced_charting_widget.dart  candlestick_painter.dart  chart_enums.dart  chart_toolbar.dart  comparison_chart.dart  drawing_tools.dart  indicator_painter.dart  notes_panel.dart  order_dialog.dart  volume_painter.dart
flutter/test/: README.md
flutter/test/integration/: ffi_integration_test.dart
flutter/test/unit/: base_provider_test.dart  bearly_managed_provider_test.dart  bullrunnr_provider_test.dart  market_data_provider_test.dart  (+5 more)
rust/: Cargo.toml
rust/:memory:/: bullshift.db
rust/benches/: benchmarks.rs
rust/src/: error.rs  lib.rs
rust/src/agnos/: mod.rs
rust/src/ai_bridge/: mod.rs
rust/src/algo/: mod.rs
rust/src/audit/: mod.rs
rust/src/bullrunnr/: mod.rs
rust/src/data_stream/: mod.rs
rust/src/database/: mod.rs
rust/src/indicators/: mod.rs
rust/src/integration/: mod.rs
rust/src/logging/: mod.rs
rust/src/mobile/: mod.rs
rust/src/monitoring/: mod.rs
rust/src/options/: mod.rs
rust/src/paper_hands/: mod.rs
rust/src/plugins/: mod.rs
rust/src/rbac/: mod.rs
rust/src/security/: mod.rs
rust/src/sentiment/: mod.rs
rust/src/sheets/: mod.rs
rust/src/trading/: api.rs  execution.rs  mod.rs  portfolio.rs  tax_lots.rs  trade_history.rs
rust/src/trading/brokers/: coinbase.rs  interactive_brokers.rs  kraken.rs  mod.rs  robinhood.rs  schwab.rs  tradier.rs  webull.rs
rust/src/trendsetter/: mod.rs
rust/src/webhooks/: mod.rs
rust/src/websocket/: mod.rs
scripts/: verify-agnos-sandbox.sh
(+80 files in other folders)
