[package]
name = "bullshift-core"
version = "2026.2.16"
edition = "2021"

[lib]
name = "bullshift_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
dirs = "5.0"
thiserror = "1.0"

# Trading & Market Data
tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

# Security
ring = "0.17"
aes-gcm = "0.10"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP API server
axum = "0.7"

# gRPC
tonic = "0.10"
prost = "0.12"

# FFI
ffi = "0.1"

# Logging
log = "0.4"
env_logger = "0.10"

# Random number generation
rand = "0.8"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[dev-dependencies]
criterion = "0.5"
tonic-build = "0.10"

[[bench]]
name = "benchmarks"
harness = false
