[package]
name = "bullshift-core"
version = "2026.3.5"
edition = "2021"

[lib]
name = "bullshift_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
dirs = "5.0"
thiserror = "1.0"
async-trait = "0.1"

# Trading & Market Data
tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

# Security
ring = "0.17"
aes-gcm = "0.10"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP API server
axum = "0.7"

# gRPC
tonic = "0.10"
prost = "0.12"

# Logging
log = "0.4"
env_logger = "0.10"

# Random number generation
rand = "0.8"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = "0.5"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "benchmarks"
harness = false
